# claude-rubber-band

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: block_bash_redirects.py  cleanup_tmp_scripts.py
skills/rubber-band-config/: SKILL.md
tests/: test_block_bash_redirects.py
