[project]
name = "claude-rubber-band"
version = "0.1.0"
description = "Hooks that enforce tool-first shell habits and clean up temp files."
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
exclude = [
    '.git',
    '__pycache__',
    '.github',
]
select = ['ALL']
ignore = [
    'D',
    'G004',
    'T201',   # print is intentional hook output
    'S108',   # /tmp/ paths are intentional allowlist entries
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'S101',
    'ANN202',
    'SLF001',
    'PLR2004',
    'INP001',
]

[tool.ruff.lint.isort]
force-single-line = true
